--- a/main.css
+++ b/main.css
@@ -26,6 +26,7 @@ li {
 .tooltip {
   position: relative;
   cursor: pointer;
+  font-size: 1em;
 }
 
 .tooltip .tooltiptext {
@@ -70,6 +71,7 @@ li {
 
 .footer_text {
     padding: 0px 5%;
+    font-size: 1em;
 }
 
 .center_text {
@@ -108,6 +110,7 @@ li {
 
 .expandable-article .truncated-text {
     cursor: pointer;
+    font-size: 1em;
 }
 
 .expandable-article .truncated-text:hover {
@@ -123,6 +126,7 @@ li {
     width: 75%;
     text-align: center;
     margin: auto;
+    font-size: 1em;
 }
 
 .expandable-article.expanded .truncated-text {
@@ -150,6 +154,7 @@ li {
 
 .social_info_p {
     margin-top: 0px;
+    font-size: 1em;
 }
 
 .header_text {
@@ -165,6 +170,10 @@ li {
     font-weight: bold;
     font-size: 1.2em;
     list-style: none;
+}
+
+.about-me {
+    font-size: 1em;
 }
 
 
