--- a/main.css
+++ b/main.css
@@ -23,6 +23,10 @@ li {
     list-style-type: square;
 }
 
+img {
+    margin-left: 97%;
+}
+
 .tooltip {
   position: relative;
   cursor: pointer;
@@ -59,6 +63,7 @@ li {
 
 .left {
   text-align: left;
+  color: white;
 }
 
 .center {
@@ -67,6 +72,7 @@ li {
 
 .right {
   text-align: right;
+  color: white;
 }
 
 .footer_text {
@@ -186,6 +192,16 @@ li {
 
 .about-me {
     font-size: 1em;
+}
+
+.about-me dt {
+    font-size: 1.1em;
+    font-weight: bold;
+    margin-left: .5%;
+}
+
+.about-me dd {
+    margin-bottom: .5%;
 }
 
 
