Initial groundwork laid for a navigation of sorts. Added new divs that are hidden by default for more information on MROWS and MCPDT. Added a home link that shows up when viewing the MROWS and MCPDT pages. Moved JS files into their own directory. CSS changes for new divs, spans, and other updates.

--- a/main.css
+++ b/main.css
@@ -71,6 +71,16 @@ li {
   color: white;
 }
 
+.home-button {
+    float: right;
+    margin-right: .5%;
+    display: none;
+}
+
+.home-button:hover {
+    cursor: pointer;
+}
+
 .footer_text {
     padding: 0px 5%;
     font-size: 1em;
@@ -144,7 +154,7 @@ li {
 }
 
 .selected-partial {
-  background-color: #c0c0c0;
+    background-color: #c0c0c0;
 }
 
 .expandable-question .full-text {
@@ -184,6 +194,11 @@ li {
     font-weight: bold;
     font-size: 1.2em;
     list-style: none;
+}
+
+.ul-header-link:hover {
+    cursor: pointer;
+    background-color: #c0c0c0;
 }
 
 .accom_date_range {
